--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Its my first project using ThreeJS",
   "main": "/JS/script.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "parcel src/index.html"
   },
   "author": "Victor-Lis",
   "license": "ISC",
